<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:padding="8dp"
    android:gravity="center"
    android:background="@drawable/fondo_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:text="@string/bienvenida"
            android:paddingTop="8dp"
            android:fontFamily="sans-serif-thin"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:gravity="center"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@drawable/fondo_inputs"
                android:hint="@string/correo_electr_nico"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:id="@+id/email_text_edit"
                android:inputType="textEmailAddress"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@drawable/fondo_inputs"
                android:hint="@string/contraseña"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:id="@+id/password_text_edit"
                android:inputType="textPassword"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/iniciar_sesi_n"
                android:id="@+id/btnIniciar"
                />
            <ProgressBar
                android:layout_width="32dp"
                android:layout_height="60dp"
                android:id="@+id/progressBar"
                android:visibility="gone"
                android:indeterminateTint="@color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_tienes_una_cuenta"
                android:id="@+id/goto_signup"
                android:textColor="@color/black"
                android:gravity="center"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>